--- a/index.html
+++ b/index.html
@@ -4,7 +4,36 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Noodles</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Noodles 3D - Node-Based GLTF/GLB 3D Model Viewer</title>
+    <meta name="title" content="Noodles 3D - Node-Based GLTF/GLB 3D Model Viewer" />
+    <meta name="description" content="Free online GLTF/GLB 3D model viewer with node-based material visualization. Explore 3D models, materials, animations, and scene graphs with an intuitive node interface." />
+    <meta name="keywords" content="GLTF, GLB, 3D model viewer, node-based viewer, material viewer, node graph, scene graph, web-based 3D viewer, online 3D tool" />
+    <meta name="author" content="Noodles 3D" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://jovcem.github.io/noodles/" />
+    <meta property="og:title" content="Noodles 3D - Node-Based GLTF/GLB 3D Model Viewer" />
+    <meta property="og:description" content="Free online GLTF/GLB 3D model viewer with node-based material visualization. Explore 3D models, materials, animations, and scene graphs with an intuitive node interface." />
+    <meta property="og:image" content="https://jovcem.github.io/noodles/og-image.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://jovcem.github.io/noodles/" />
+    <meta property="twitter:title" content="Noodles 3D - Node-Based GLTF/GLB 3D Model Viewer" />
+    <meta property="twitter:description" content="Free online GLTF/GLB 3D model viewer with node-based material visualization. Explore 3D models, materials, animations, and scene graphs with an intuitive node interface." />
+    <meta property="twitter:image" content="https://jovcem.github.io/noodles/og-image.png" />
+
+    <!-- Additional SEO -->
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+    <meta name="revisit-after" content="7 days" />
+    <link rel="canonical" href="https://jovcem.github.io/noodles/" />
+
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#646cff" />
   </head>
   <body>
     <div id="root"></div>
